--- a/index.html
+++ b/index.html
@@ -58,8 +58,49 @@
         iframe {
             margin-top: 20px;
         }
-    </style>
-</head>
+  <style>
+body {
+    margin: 0;
+    padding: 0;
+    background: linear-gradient(to bottom, #000000, #1a1a1a);
+    font-family: 'Poppins', sans-serif;
+    color: #ffffff;
+    text-align: center;
+}
+
+.container {
+    padding: 50px 20px;
+}
+
+h1 {
+    font-size: 42px;
+    color: #ff4da6;
+    text-shadow: 0 0 15px #ff4da6;
+}
+
+p {
+    font-size: 22px;
+    line-height: 1.8;
+    margin: 20px 0;
+    text-shadow: 0 0 8px rgba(255, 255, 255, 0.3);
+}
+
+button {
+    padding: 12px 25px;
+    font-size: 18px;
+    background-color: #ff4da6;
+    border: none;
+    border-radius: 30px;
+    color: white;
+    cursor: pointer;
+    margin-top: 20px;
+}
+
+button:hover {
+    background-color: #ff1a8c;
+}
+</style>
+</head> <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
 
 <body>
 
